@@ -1,7 +1,7 @@
-cloud: auto
 user: ubuntu
 disable_root: 1
 preserve_hostname: False
+# datasource_list: [ "NoCloud", "OVF", "Ec2" ]
 
 cloud_init_modules:
  - resizefs
